fixed z-index in mobile-filters

--- a/src/shared/ui/accordion/styles.module.css
+++ b/src/shared/ui/accordion/styles.module.css
@@ -5,6 +5,7 @@
 	align-items: center;
 	font-size: 16px;
 	line-height: 24px;
+	color: var(--color-dark);
 }
 
 .accordion__icon {
